--- a/src/components/LandingPage/TestPage/TestPage.css
+++ b/src/components/LandingPage/TestPage/TestPage.css
@@ -5,7 +5,7 @@ body {
 .head {
   background: #06286e;
   color: white;
-  padding: 90px 20px 20px 20px;
+  padding: 90px 20px 30px 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -17,7 +17,7 @@ body {
 
 .h1 {
   font-size: 30px;
-  font-weight: 800;
+  font-weight: 600;
 }
 /* Box 1 styling */
 
@@ -25,9 +25,8 @@ body {
 .box2,
 .box3 {
   border-radius: 10px;
-  background: white;
   height: 220px;
-  padding: 20px;
+  padding: 20px 15px;
   transform: translate(0, -50%);
   width: 27%;
   top: 56%;
@@ -35,29 +34,30 @@ body {
 }
 
 .box1 {
-  border-bottom: 140px solid rgba(173, 216, 230, 0.6);
+  border-bottom: 140px solid #e3f0f4;
   position: absolute;
   left: 9%;
 }
 
 .box2 {
-  border-bottom: 140px solid #ffe4e1;
+  border-bottom: 140px solid #fbf3e1;
   position: absolute;
-  left: 38.5%;
+  left: 37%;
 }
 
 .box3 {
-  border-bottom: 140px solid #cdb7e2;
+  border-bottom: 140px solid #e6e2e8;
   position: absolute;
-  left: 68%;
+  left: 65%;
 }
 
 .box1 img,
 .box2 img,
 .box3 img {
   position: relative;
-  bottom: 15px;
+  bottom: 17px;
   left: 120px;
+  padding-top: 15px;
 }
 
 .one p {
@@ -68,6 +68,7 @@ body {
   line-height: 20.07px;
   display: flex;
   justify-content: center;
+  text-align: center;
   align-items: center;
   padding-top: 10px;
   white-space: inherit;
@@ -80,7 +81,7 @@ h6 {
   justify-content: center;
   align-items: center;
   color: #576071;
-  font-size: 20px;
+  font-size: 18px;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
@@ -223,6 +224,97 @@ h6 {
 
 /* For Mobile Phones */
 
+
+
+@media (max-width: 1024px) {
+  .h1 {
+    font-size: 30px;
+    font-weight: 600;
+  }
+
+  .box1 {
+    width: 29%;
+    left: 5%;
+  }
+
+  .box2 {
+    width: 29%;
+    left: 35%;
+  }
+
+  .box3 {
+    width: 29%;
+    left: 65%;
+  }
+
+  .box1 img,
+  .box2 img,
+  .box3 img {
+    width: 20%;
+    margin: 2px auto auto;
+    position: static;
+  }
+
+  .one p {
+    padding-top: 5px;
+
+  }
+
+  h6 {
+    font-size: 15px;
+    padding-top: 15px;
+    font-weight: 800;
+  }
+
+
+
+  /*.radio-btn {
+    margin-right: 10px !important;
+    margin-left: 10px !important;
+  }
+
+  .radio-btn input[type="radio"] {
+    width: 30px;
+    height: 30px;
+    margin: 10px;
+    border-radius: 50%;
+  }
+
+  .radio-btn label {
+    position: relative;
+    right: 46px;
+    top: 32px;
+    font-size: 16px;
+  }
+
+  .sometimes,
+  .often {
+    position: relative !important;
+    top: 32px !important;
+    right: 44px !important;
+  }
+
+  .sometimes-input {
+    -webkit-appearance: none;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    outline: none;
+    box-shadow: 0 0 0 2px #a6c1f9;
+    transition: box-shadow 0.3s;
+    position: relative;
+    left: 17px;
+  }
+
+  .question {
+    font-size: 16px;
+  }
+
+  .next{
+    height: 6vh;
+  }*/
+}
+
 @media (max-width: 768px) {
 
   body {
@@ -235,7 +327,7 @@ h6 {
 
   .h1 {
     font-size: 25px !important;
-    font-weight: 800 !important;
+    font-weight: 700 !important;
   }
 
   .head{
@@ -331,84 +423,6 @@ h6 {
 }
 
 
-@media (max-width: 1024px) {
-  .h1 {
-    font-size: 40px;
-    font-weight: 800;
-  }
-
-  .head p {
-    font-size: 25px;
-  }
-
-  .box1 img,
-  .box2 img,
-  .box3 img {
-    width: 20%;
-    margin: 2px auto auto;
-    position: static;
-  }
-
-  .one p {
-    font-size: 15px;
-    padding-top: 5px;
-  }
-
-  h6 {
-    font-size: 15px;
-    padding-top: 15px;
-    font-weight: 800;
-  }
-
-
-
-  /*.radio-btn {
-    margin-right: 10px !important;
-    margin-left: 10px !important;
-  }
-
-  .radio-btn input[type="radio"] {
-    width: 30px;
-    height: 30px;
-    margin: 10px;
-    border-radius: 50%;
-  }
-
-  .radio-btn label {
-    position: relative;
-    right: 46px;
-    top: 32px;
-    font-size: 16px;
-  }
-
-  .sometimes,
-  .often {
-    position: relative !important;
-    top: 32px !important;
-    right: 44px !important;
-  }
-
-  .sometimes-input {
-    -webkit-appearance: none;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    outline: none;
-    box-shadow: 0 0 0 2px #a6c1f9;
-    transition: box-shadow 0.3s;
-    position: relative;
-    left: 17px;
-  }
-
-  .question {
-    font-size: 16px;
-  }
-
-  .next{
-    height: 6vh;
-  }*/
-}
-
 
 
 /*============Emma's styling=============*/
@@ -449,7 +463,7 @@ input[type=radio].input-box{
   width: 16px;
   height: 16px;
   margin: 0rem 1.9rem;
-  accent-color: #0a53e6; 
+  accent-color: #0a53e6;
 }
 .checked{
   padding-top: 0.8rem;
